src/test/resources/annotator/IncorrectIfCondition.jcl
//IFBAD     IF  (ABEND > <error descr="<if value> expected, got '('">(</error>STEP1.RC > 8)) THEN
//TRUE      EXEC  PROC=ERROR
//IFBADEND  ENDIF